--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "eslint-plugin-react": "^7.24.0",
     "lerna": "^3.13.1",
     "prettier": "^2.2.1"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.12.0",
+    "@material-ui/icons": "^4.11.2"
   }
 }
