--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@iconify-icons/icon-park": "^1.1.0",
+    "@iconify/react": "^1.1.4",
     "@sanity/cli": "^2.7.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.21.0",
