--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-postcss": "^4.0.0",
     "gatsby-plugin-prettier-eslint": "^1.0.6",
     "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-source-filesystem": "^3.9.0",
     "gatsby-source-sanity": "^7.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
