--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "gatsby": "^3.9.0",
     "gatsby-image": "^2.0.41",
     "gatsby-plugin-image": "^1.9.0",
+    "gatsby-plugin-manifest": "^3.11.0",
     "gatsby-plugin-postcss": "^4.0.0",
     "gatsby-plugin-prettier-eslint": "^1.0.6",
     "gatsby-plugin-react-helmet": "^4.0.0",
